--- a/index.html
+++ b/index.html
@@ -56,9 +56,41 @@
         </section>
 
 
-        <section id="einkauf" class="list hidden">
-            <h2>Einkaufsliste</h2>
+        <section id="einkauf" class="list card hidden">
+            <div class="ziele-header">
+                <h2>Einkaufsliste</h2>
+                <button id="delete-gekauft">Gekauftes löschen</button>
+            </div>
+
+            <div class="ziel-add">
+                <h4>Was brauchen wir?</h4>
+                <input id="einkauf-text" type="text" placeholder="Artikel">
+                <select id="einkauf-dringlichkeit">
+                    <option value="3">Dringend</option>
+                    <option value="2" selected>Normal</option>
+                    <option value="1">Irgendwann</option>
+                </select>
+                <button id="einkauf-add">Ab auf die Liste!</button>
+            </div>
+
+            <div class="ziel-bloecke">
+                <div class="ziel-block" data-dringlichkeit="3">
+                    <h3>Dringend</h3>
+                    <div class="ziel-container"></div>
+                </div>
+
+                <div class="ziel-block" data-dringlichkeit="2">
+                    <h3>Normal</h3>
+                    <div class="ziel-container"></div>
+                </div>
+
+                <div class="ziel-block" data-dringlichkeit="1">
+                    <h3>Irgendwann</h3>
+                    <div class="ziel-container"></div>
+                </div>
+            </div>
         </section>
+
 
         <section id="wunsch" class="list card hidden">
             <div class="ziele-header">
