--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
         <section id="einkauf" class="list card hidden">
             <div class="ziele-header">
                 <h2>Einkaufsliste</h2>
-                <button id="delete-gekauft">Gekauftes löschen</button>
+                <button id="delete-gekauft">Schon eingetütet!</button>
             </div>
 
             <div class="ziel-add">
-                <h4>Was brauchen wir?</h4>
+                <h4>An was fehlt's?</h4>
                 <input id="einkauf-text" type="text" placeholder="Artikel">
                 <select id="einkauf-dringlichkeit">
-                    <option value="3">Dringend</option>
-                    <option value="2" selected>Normal</option>
-                    <option value="1">Irgendwann</option>
+                    <option value="3">Ab ins Wägchen!</option>
+                    <option value="2" selected>Wenn man dran vorbeikommt...</option>
+                    <option value="1">EEEGAAAALLLL</option>
                 </select>
                 <button id="einkauf-add">Ab auf die Liste!</button>
             </div>
