--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
 
             <div class="ziel-bloecke">
                 <div class="ziel-block" data-dringlichkeit="3">
-                    <h3>Dringend</h3>
+                    <h3>Ab ins Wägchen!</h3>
                     <div class="ziel-container"></div>
                 </div>
 
                 <div class="ziel-block" data-dringlichkeit="2">
-                    <h3>Normal</h3>
+                    <h3>Wenn man dran vorbeikommt...</h3>
                     <div class="ziel-container"></div>
                 </div>
 
                 <div class="ziel-block" data-dringlichkeit="1">
-                    <h3>Irgendwann</h3>
+                    <h3>EEEGAAAALLLL</h3>
                     <div class="ziel-container"></div>
                 </div>
             </div>
